--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             /></label>
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="./" class="nav-link">home</a>
+                <a href="./index.html" class="nav-link">home</a>
               </li>
               <li class="nav-item">
                 <a href="#features" class="nav-link">features</a>
